提交启动参数